* config/sparc/sparc.h (ASM_PREFERRED_EH_DATA_FORMAT, 	ASM_OUTPUT_DWARF_PCREL): Define. 	* config/sparc/sol2.h (ASM_PREFERRED_EH_DATA_FORMAT): Define. 	* configure.in (HAVE_AS_SPARC_UA_PCREL): Check whether as supports 	.uaword %r_disp32() and linker handles it correctly. 	* configure, config.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48344 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config.in
+++ b/gcc/config.in
@@ -535,6 +535,9 @@
 /* Define if your assembler supports -relax option. */
 #undef HAVE_AS_RELAX_OPTION
 
+/* Define if your assembler and linker support unaligned PC relative relocs. */
+#undef HAVE_AS_SPARC_UA_PCREL
+
 /* Define if the assembler supports 64bit sparc. */
 #undef AS_SPARC64_FLAG
 
