* Makefile.in (tree-optimize.o): Don't depend on c-common.h 	* tree-cfg.c: Don't include c-tree.h.  Explain why we need to 	include c-common.h. 	* tree-dfa.c: Explain why we need to include c-common.h. 	* tree-ssa.c: Ditto. 	* tree-optimize.c: Don't include c-common.h
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48376 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ast-optimizer-branch/gcc/Makefile.in
+++ b/ast-optimizer-branch/gcc/Makefile.in
@@ -1330,7 +1330,7 @@ tree-dfa.o : tree-dfa.c tree-optimize.h tree-flow.h $(CONFIG_H) $(SYSTEM_H) \
    $(GGC_H) output.h diagnostic.h errors.h
 tree-optimize.o : tree-optimize.c tree-optimize.h tree-flow.h $(CONFIG_H) \
    $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(BASIC_BLOCK_H) $(EXPR_H) \
-   $(C_COMMON_H) $(GGC_H) output.h diagnostic.h ssa.h errors.h flags.h
+   $(GGC_H) output.h diagnostic.h ssa.h errors.h flags.h
 stor-layout.o : stor-layout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h \
    function.h $(EXPR_H) $(RTL_H) toplev.h $(GGC_H) $(TM_P_H)
 fold-const.o : fold-const.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h \
