--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,11 @@
+Sun Dec 30 17:14:22 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (cleanup_cfg): Do not kill tail recursion label list.
+	* sibcall.c (optimize_sibling_and_tail_recursive_call): Do not
+	rebuild cfg;  free tail recursive list.
+	* toplev.c (rest_of_compilation): Dump more of sibcalling;
+	kill NOTE_INSN_PREDICTION notes.
+
 Sat Dec 29 15:25:45 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* Mainline merger (cfg-merge-20012912 tag).
