* cfgcleanup.c (outgoing_edges_match): Fix computing of probabilities.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48424 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Mon Dec 31 14:46:20 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (outgoing_edges_match): Fix computing of probabilities.
+
 Sun Dec 30 17:14:22 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (cleanup_cfg): Do not kill tail recursion label list.
