--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,10 @@
+Mon Dec 31 15:39:49 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (outgoing_edges_match): Add debug output.
+	* tracer.c (MIN_COUNT, MIN_FREQUENCY): Kill.
+	(MIN_BRANCH_PROBABILITY): New macro.
+	(find_best_successor): Use it.
+
 Mon Dec 31 14:46:20 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (outgoing_edges_match): Fix computing of probabilities.
