* Makefile.in (LIBGCC_DEPS): Added missing dependency on gcov-io.h         (profile.o): New dependency profile.h         (final.o): New dependency profile.h         * profile.h: New file. New global structure profile_info.         * final.h (count_edges_instrumented_now): Declare.         (current_function_cfg_checksum): Declare.         (function_list): New structure.         (functions_head, functions_tail): New static variables.         (end_final): Emits more data, removed some -ax stuff.         (final): Stores function names and chcksums.         * gcov-io.h (__write_gcov_string): New function.         (__read_gcov_string): New function.         * gcov.c (read_profile): New function.         (create_program_flow_graph): Uses read_profile instead of reading 	da_file.         (read_files): Removed da_file checking, it's done by read_profile now.         * libgcc2.c (bb_function_info): New structure.         (bb): New field in structure, removed some -ax stuff.         (__bb_exit_func): Changed structure of da_file.         * profile.c (count_edges_instrumented_now): New global variable.         (current_function_cfg_checksum): New global variable.         (max_counter_in_program): New global variable.         (get_exec_counts): New function.         (compute_checksum): New function.         (instrument_edges): Sets count_edges_instrumented_now.         (compute_branch_probabilities): Uses get_exec_counts instead of 	reading da_file.         (branch_prob): Calls compute_checksum and writes extra data to bbg_file.         (init_branch_prob): Removed da_file checking, done in get_exec_counts 	now.         (end_branch_prob): Removed da_file checking, done in get_exec_counts 	now.         * gcov.texi: Updated information about gcov file format.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48446 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/Makefile.in
+++ b/cfg-branch/gcc/Makefile.in
@@ -1014,7 +1014,7 @@ libgcc.mk: config.status Makefile mklibgcc $(LIB2ADD) $(LIB2ADD_ST) xgcc$(exeext
 
 # All the things that might cause us to want to recompile bits of libgcc.
 LIBGCC_DEPS = $(GCC_PASSES) $(LANGUAGES) stmp-int-hdrs $(STMP_FIXPROTO) \
-	libgcc.mk $(srcdir)/libgcc2.c $(TCONFIG_H) \
+	libgcc.mk $(srcdir)/libgcc2.c $(srcdir)/gcov-io.h $(TCONFIG_H) \
 	$(MACHMODE_H) longlong.h gbl-ctors.h config.status stmp-int-hdrs \
 	tsystem.h $(FPBIT) $(DPBIT) $(LIB2ADD) $(LIB2ADD_ST) $(LIB2ADDEH) \
 	$(LIB2ADDEHDEP) $(EXTRA_PARTS) $(srcdir)/config/$(LIB1ASMSRC)
@@ -1454,7 +1454,8 @@ conflict.o : conflict.c $(CONFIG_H) $(SYSTEM_H) $(OBSTACK_H) $(HASHTAB_H) \
    $(RTL_H) hard-reg-set.h $(BASIC_BLOCK_H)
 profile.o : profile.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    insn-config.h output.h $(REGS_H) $(EXPR_H) function.h \
-   gcov-io.h toplev.h $(GGC_H) hard-reg-set.h $(BASIC_BLOCK_H) $(TARGET_H)
+   gcov-io.h toplev.h $(GGC_H) hard-reg-set.h $(BASIC_BLOCK_H) $(TARGET_H) \
+   profile.h
 loop.o : loop.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) flags.h $(LOOP_H) \
    insn-config.h $(REGS_H) hard-reg-set.h $(RECOG_H) $(EXPR_H) \
    real.h $(PREDICT_H) $(BASIC_BLOCK_H) function.h \
@@ -1538,7 +1539,8 @@ sched-vis.o : sched-vis.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) sched-int.h \
 final.o : final.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h intl.h \
    $(REGS_H) $(RECOG_H) conditions.h insn-config.h $(INSN_ATTR_H) function.h \
    real.h output.h hard-reg-set.h except.h debug.h xcoffout.h \
-   toplev.h reload.h dwarf2out.h $(BASIC_BLOCK_H) $(TM_P_H) $(TARGET_H) $(EXPR_H)
+   toplev.h reload.h dwarf2out.h $(BASIC_BLOCK_H) $(TM_P_H) $(TARGET_H) $(EXPR_H) \
+   profile.h
 recog.o : recog.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) function.h $(BASIC_BLOCK_H) \
    $(REGS_H) $(RECOG_H) $(EXPR_H) hard-reg-set.h flags.h insn-config.h \
    $(INSN_ATTR_H) real.h toplev.h output.h reload.h $(TM_P_H)
