* configure.in: Prepend ${srcdir}/config/${cpu_type}/ instead of 	${srcdir}/ginclude/ to every entry in extra_headers. 	* configure: Regenerate. 	* ginclude/math-3300.h: Rename to config/m68k/math-3300.h. 	* ginclude/math-68881.h: Rename to config/m68k/math-68881.h. 	* ginclude/ppc-asm.h: Rename to config/rs6000/ppc-asm.h. 	* ginclude/proto.h: Rename to config/convex/proto.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48454 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1,7 +1,7 @@
 # configure.in for GCC
 # Process this file with autoconf to generate a configuration script.
 
-# Copyright (C) 1997, 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
+# Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
 
 #This file is part of GCC.
 
@@ -1136,10 +1136,10 @@ extra_headers_list=
 if test "x$extra_headers" = x
 then true
 else
-	# Prepend ${srcdir}/ginclude/ to every entry in extra_headers.
+	# Prepend ${srcdir}/config/${cpu_type}/ to every entry in extra_headers.
 	for file in $extra_headers;
 	do
-		extra_headers_list="${extra_headers_list} \$(srcdir)/ginclude/${file}"
+		extra_headers_list="${extra_headers_list} \$(srcdir)/config/${cpu_type}/${file}"
 	done
 fi
 
