--- a/fastjar/configure.in
+++ b/fastjar/configure.in
@@ -22,7 +22,7 @@ dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_STRUCT_TM
-AC_CHECK_HEADERS(fcntl.h unistd.h sys/param.h getopt.h)
+AC_CHECK_HEADERS(fcntl.h unistd.h sys/param.h getopt.h stdlib.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_OFF_T
