* cfgcleanup.c (outgoing_edges_match): Be more conservative on the 	requirement to match perfectly. 	* cfglayout.c (fixup_reorder_chain): Remove unused variable. 	* predict.c: Inlude profile.h 	(MIN_COUNT): Rename to MIN_COUNT_FRACTION 	(maybe_hot_bb_p, probably_cold_bb_p, probably_never_executed_bb_p): 	Use the information about maximal counter in the program.
Thu Nov 22 02:24:39 CET 2001  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>

	* Makefile.in (profile.o): Add dependency on libfuncs.h and gthr.h.
	(XCFLAGS): Add GTHREAD_FLAGS.
	* attribs.c (handle_no_profile_attribute): New static function.
	(c_common_attribute_table): New attribute "no_profile".
	* cfganal.c (fix_position): New static function.
	(flow_call_edges_add): Modified.
	* crtstuff.c: Prevent functions from being profiled.
	* gcov-io.h: Prevent functions from being profiled.
	* gengenrtl.c: Prevent functions from being profiled.
	* function.c (expand_function_start): Set no_profile.
	* function.h (struct function): Add arc_counters_adress and no_profile.
	* final.c (end_final): Emit LPBF label.
	* flags.h (flag_unsafe_profile_arcs): New.
	* libfuncs.h (enum libfunc_index): Add LTI_find_arc_counters.
	* libgcc2.c: Include gthr.h.  Prevent functions from being profiled.
	(__bb_find_arc_counters, __bb_thread_start_func, __bb_thread_end_func):
	New.
	(__bb_exit_func, __bb_init_func, __bb_find_arc_counters,
	__bb_thread_start_func, __bb_thread_end_func): Handle thread-safe
	profiling.
	* libgcc2.h (__bb_init_func): Modified declaration.
	(__bb_thread_start_func, __bb_thread_end_func, __bb_find_arc_counters):
	Declared.
	* optabs.c (init_optabs): Init __bb_find_arc_counters.
	* profile.c: Include libfuncs.h and gthr.h.
	(insert_profiler_initialization): New static function.
	(instrument_edges): Modified.
	(branch_prob): Handle no_profile, insert per-function profiler code.
	(find_spanning_tree): More information to dump.
	(gen_edge_profiler): Generate thread-safe profiling code.
	(output_func_start_pro

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,49 @@
+Thu Jan  3 21:52:09 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (outgoing_edges_match): Be more conservative on the
+	requirement to match perfectly.
+	* cfglayout.c (fixup_reorder_chain): Remove unused variable.
+	* predict.c: Inlude profile.h
+	(MIN_COUNT): Rename to MIN_COUNT_FRACTION
+	(maybe_hot_bb_p, probably_cold_bb_p, probably_never_executed_bb_p):
+	Use the information about maximal counter in the program.
+
+Thu Nov 22 02:24:39 CET 2001  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* Makefile.in (profile.o): Add dependency on libfuncs.h and gthr.h.
+	(XCFLAGS): Add GTHREAD_FLAGS.
+	* attribs.c (handle_no_profile_attribute): New static function.
+	(c_common_attribute_table): New attribute "no_profile".
+	* cfganal.c (fix_position): New static function.
+	(flow_call_edges_add): Modified.
+	* crtstuff.c: Prevent functions from being profiled.
+	* gcov-io.h: Prevent functions from being profiled.
+	* gengenrtl.c: Prevent functions from being profiled.
+	* function.c (expand_function_start): Set no_profile.
+	* function.h (struct function): Add arc_counters_adress and no_profile.
+	* final.c (end_final): Emit LPBF label.
+	* flags.h (flag_unsafe_profile_arcs): New.
+	* libfuncs.h (enum libfunc_index): Add LTI_find_arc_counters.
+	* libgcc2.c: Include gthr.h.  Prevent functions from being profiled.
+	(__bb_find_arc_counters, __bb_thread_start_func, __bb_thread_end_func):
+	New.
+	(__bb_exit_func, __bb_init_func, __bb_find_arc_counters,
+	__bb_thread_start_func, __bb_thread_end_func): Handle thread-safe
+	profiling.
+	* libgcc2.h (__bb_init_func): Modified declaration.
+	(__bb_thread_start_func, __bb_thread_end_func, __bb_find_arc_counters):
+	Declared.
+	* optabs.c (init_optabs): Init __bb_find_arc_counters.
+	* profile.c: Include libfuncs.h and gthr.h.
+	(insert_profiler_initialization): New static function.
+	(instrument_edges): Modified.
+	(branch_prob): Handle no_profile, insert per-function profiler code.
+	(find_spanning_tree): More information to dump.
+	(gen_edge_profiler): Generate thread-safe profiling code.
+	(output_func_start_profiler): Modified.
+	* toplev.c (flag_unsafe_profile_arcs): New.
+	(f_options): New flag "unsafe-profile-arcs".
+
 Tue Jan  1 21:12:40 CET 2002  Pavel Nejedly  <bim@atrey.karlin.mff.cuni.cz
 
 	* Makefile.in (LIBGCC_DEPS): Added missing dependency on gcov-io.h
@@ -502,3 +548,4 @@ Mon Nov 12 14:19:07 CET 2001  Jan Hubicka  <jh@suse.cz>
 	(set_insn_scopes, regenerate_block_notes): New.
 	(INSN_SCOPE): New.
 	(insn_scope): New varray.
+
