* Makefile.in ($(LIBG2C):): Let libtool decide when to add -lc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48529 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/Makefile.in
+++ b/libf2c/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for GNU F77 compiler runtime.
-#   Copyright (C) 1995-1998, 2001 Free Software Foundation, Inc.
+#   Copyright (C) 1995-1998, 2001, 2002 Free Software Foundation, Inc.
 #   Contributed by Dave Love (d.love@dl.ac.uk).
 #
 #This file is part of GNU Fortran.
@@ -147,7 +147,7 @@ $(LIBG2C): s-libi77 s-libf77 s-libu77 s-libe77
 	  -objectlist s-libf77 \
 	  -objectlist s-libi77 \
 	  -objectlist s-libu77 \
-	  -lc -lm
+	  -lm
 
 i77:
 	cd libI77; $(MAKE) $(FLAGS_TO_PASS) all
