* cfgcleanup.c: Include tm_p.h 	(mark_effect): Fix handling of hard register; fix handling of SET 	* cfgcleanup.c (try_forward_edges): Allow multiple jump threading.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48552 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,9 @@
+Sat Jan  5 00:43:43 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c: Include tm_p.h
+	(mark_effect): Fix handling of hard register; fix handling of SET
+	* cfgcleanup.c (try_forward_edges): Allow multiple jump threading.
+
 Thu Jan  3 21:52:09 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (outgoing_edges_match): Be more conservative on the
