* unroll.c (copy_loop_body): Always properly update JUMP_LABEL and 	LABEL_NUSES.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48583 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Sun Jan  6 21:04:57 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* unroll.c (copy_loop_body): Always properly update JUMP_LABEL and
+	LABEL_NUSES.
+
 Sat Jan  5 00:43:43 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c: Include tm_p.h
