2002-01-06 Andreas Tobler <a.tobler@schweiz.ch>
	* configure, include/config.h.in: Rebuilt.
	* java/lang/natSystem.cc (getSystemTimeZone): Check HAVE_TM_ZONE.
	* configure.in: Call AC_STRUCT_TIMEZONE.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48588 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -450,6 +450,7 @@ else
      AC_DEFINE(HAVE_PROC_SELF_EXE)])
 
    AM_ICONV
+   AC_STRUCT_TIMEZONE
 
    AC_CHECK_FUNCS(gethostbyname_r, [
      AC_DEFINE(HAVE_GETHOSTBYNAME_R)
