* cfgcleanup.c (merge_blocks): Fix debug output.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48680 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Wed Jan  9 14:14:37 CET 2002  Josef Zlomek  <zlomj9am@artax.karlin.mff.cuni.cz>
+
+	* cfgcleanup.c (merge_blocks): Fix debug output.
+
 Mon Jan  7 15:16:21 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	Merge from mainlnie (cfg-merge-20020701 tag).
