* basic-block.h: New flag EDGE_CAN_FALLTHRU 	* cfganal.c (set_edge_can_fallthru_flag): New function; marks the edges 	that can be made fallthru. 	* bb-reorder.c (find_traces_1_round): Avoid duplication of the loop 	headers and rotate loops so that the loop header is the last bb, make 	traces only through EDGE_CAN_FALLTHRU edges, indentation fixes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48681 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,5 +1,14 @@
 Wed Jan  9 14:14:37 CET 2002  Josef Zlomek  <zlomj9am@artax.karlin.mff.cuni.cz>
 
+	* basic-block.h: New flag EDGE_CAN_FALLTHRU
+	* cfganal.c (set_edge_can_fallthru_flag): New function; marks the edges
+	that can be made fallthru.
+	* bb-reorder.c (find_traces_1_round): Avoid duplication of the loop
+	headers and rotate loops so that the loop header is the last bb, make
+	traces only through EDGE_CAN_FALLTHRU edges, indentation fixes.
+
+Wed Jan  9 14:14:37 CET 2002  Josef Zlomek  <zlomj9am@artax.karlin.mff.cuni.cz>
+
 	* cfgcleanup.c (merge_blocks): Fix debug output.
 
 Mon Jan  7 15:16:21 CET 2002  Jan Hubicka  <jh@suse.cz>
